# aideon-tools

./: .releaserc.json  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  commitlint.yml  release.yml
src/: error.rs  lib.rs  main.rs  sync.rs
src/aideon/tools/: error.rs  mod.rs  sync.rs
src/aideon/tools/flatten/: mod.rs
src/aideon/tools/io/: excel_read.rs  excel_write.rs  jsonld.rs  mod.rs  rdf.rs
src/aideon/tools/model/: mod.rs
src/flatten/: mod.rs
src/io/: excel_read.rs  excel_write.rs  jsonld.rs  rdf.rs
src/model/: mod.rs
tests/: roundtrip.rs
