[package]
name = "aideon-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
calamine = { version = "0.21", default-features = false, features = ["chrono"] }
clap = { version = "4.5", features = ["derive"] }
itertools = "0.12"
log = "0.4"
once_cell = "1.19"
oxigraph = { version = "0.5", default-features = false }
rust_xlsxwriter = "0.61"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.8", features = ["v4", "v5"] }

[dev-dependencies]
assert_fs = "1.0"
insta = { version = "1.39", features = ["glob"] }
tempfile = "3.10"
