[package]
name = "aideon-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
calamine = { version = "0.31", default-features = false, features = ["chrono"] }
clap = { version = "4.5", features = ["derive"] }
oxigraph = { version = "0.5", default-features = false }
rust_xlsxwriter = "0.91"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.8", features = ["v4", "v5"] }
json-ld = { version = "0.21", default-features = false }
futures = "0.3"
json-ld-syntax = "0.21"
json-syntax = { version = "0.12", features = ["serde_json"] }
iref = "3.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.10"
